# rk2

./: CMakeLists.txt  OCP.cpp
.github/workflows/: cmake.yml
tests/: CMakeLists.txt  dip_test.cpp  programm_test.cpp  srp.h  srp_test.cpp
